# rtatblas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.nix  flake.nix  run_AD.sh
batch/: launch.sh  launch_par.sh  pbs_job.sh  run-experiment.sh  run.sh  slurm_job.sh
paper/: inputs.sh  run_setonix.sh
scripts/: analyze_json.py  compare_json.py  estimate_time.py  generate_input.py  input.py  launch_setonix.py  summarize.py
src/: .planning_system.h.swp  CMakeLists.txt  options.h  plan.h  planning_system.h  predicates.h  rtat.h  rtatblas.cpp
src/app/: CMakeLists.txt  autotune.cpp  batch_gemm.cpp  exhaustive.cpp  generate_input.cpp  json_planner.h  measure_performance.cpp  problemset.h  run_tests.cpp  run_tests_exhaustive.cpp  runner.h  simple_test.cpp  test_harness.h
src/gpu-api/: CMakeLists.txt  gpu-api.cpp  gpu-api.h
src/matrix_ops/: .matrixop.h.swp  CMakeLists.txt  matrix.h  matrixop.h  workspace.h
src/methods/: CMakeLists.txt  base_options.h  executor.h  gemm.cpp  gemm.h  json_encoding.h  syrk.cpp  syrk.h  trsm.cpp  trsm.h
src/planning/: CMakeLists.txt  planner_statistics.h  planning_system.h
src/timing/: CMakeLists.txt  device_timer.cpp  device_timer.h  timer_bank.cpp  timer_bank.h
src/utils/: CMakeLists.txt  event_timer_buffer.cpp  event_timer_buffer.h  performance_record.cpp  performance_record.h  rolling_average.cpp  rolling_average.h
tests/: CMakeLists.txt  api_test.cpp  common.h  executor_test.cpp  json_test.cpp  matrixop_test.cpp  plan_test.cpp  planning_test.cpp  timing_test.cpp  utils_test.cpp  workspace_test.cpp
